<resources>
    <string name="app_name">ManagerApp</string>
    <string name="profile_image">Profile image</string>
    <string name="full_name">Mario Rossi</string>
    <string name="informatica">Informatica</string>
    <string name="email">example@gmail.com</string>
    <string name="course">Course</string>
    <string name="action_filter">Filter</string>
    <string name="action_settings">Settings</string>
    <string name="btn_forgot_password">FORGOT PASSWORD?</string>
    <string name="password">Password</string>
    <string name="btn_already_reg">Already registered. Login Me!</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="btn_goto_register">Do not have an account yet? Register Now.</string>
    <string name="login">Login</string>
    <string name="login_btn">LOGIN</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="exams">Exams</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="edit_image">Edit image</string>
    <string name="serial_number">705624</string>
    <string name="description">Description</string>
    <string name="search_a_course">Search a course</string>
    <string name="action_search">Search</string>
    <string name="login_error_msg">Authentication error</string>
    <string name="welcome_msg">Welcome to ManagerApp</string>
    <string name="firebase_studente_error">\"get failed with \"</string>
    <string name="in_progress">In Progress</string>
    <string name="closed">Closed</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="exam">Exam</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="students">Students</string>
    <string name="student">Student</string>
    <string name="succesful_save">Successfully edited</string>
    <string name="undone_save">Changes undone</string>
    <string name="reauth_msg_email">For another email change, you must logout and re-authenticate in Manager App</string>
    <string name="doc_not_found">User not found</string>
    <string name="reauth_msg_password">For another password change, you must logout and re-authenticate in Manager App</string>
    <string name="weak_password">Weak Password: Password should be at least 6 characters</string>
    <string name="email_changed">Email address updated</string>
    <string name="password_changed">Password updated</string>
    <string name="error_save">Edit error! Something was wrong</string>
    <string name="register_field_void">You must complete all the field</string>
    <string name="download_bt_doc">Download</string>
    <string name="download_succ">File downloaded successfully</string>
    <string name="download_error">Download failed</string>
    <string name="no_selection_file">No file selected! Please select one or more file</string>
    <string name="download_select">Download selected file in progress</string>
    <string name="add_file">Add new file</string>
    <string name="upload_error">Upload error!</string>
    <string name="upload_image">Upload an image</string>
    <string name="no_file_upload">No File selected for uploading!</string>
    <string name="upload_label">Uploading file…</string>
    <string name="file_upload">File was be uploaded</string>
    <string name="email_sent">Email sent! Check your mailbox!</string>
    <string name="reset_password">Reset Password</string>
    <string name="msg_reset">Enter your account email address</string>
    <string name="error_email_sent">Mail address cannot be empty!</string>
    <string name="donwload_stop">Download is paused!</string>
    <string name="upload_stop">Upload is paused!</string>
    <string name="btn_goto_login">Back to the login</string>
    <string name="exam_name">Exam name</string>
    <string name="teachers">Teachers</string>
    <string name="secretariat">Secretariat</string>
    <string name="courses">Courses</string>
    <string name="teacher">Teacher</string>
    <string name="add_new_project">Add new project</string>
    <string name="closed_projects">Closed projects</string>
    <string name="in_progress_projects">In Progress Projects</string>
    <string name="name_project">Name project</string>
    <string name="description_project">Project description</string>
    <string name="label_exams">Select the exam</string>
    <string name="label_attendees">Select attendees</string>
    <string name="submit">Submit</string>
    <string name="add_exam">Add exam</string>
    <string name="add_attendees">Add attendees</string>
    <string name="exam_dialog_title">Choose an Exam</string>
    <string name="attendees_dialog_title">Select project\'s attendees</string>
    <string name="change_select_attendees">Change Selected Attendees</string>
    <string name="change_select_exam">Change Selected Exam</string>
    <string name="select_course">Select course</string>
    <string name="add_course">Add course</string>
    <string name="matricola_txtLabel">University number</string>
    <string name="todo">TODO</string>
    <string name="change_select_course">Change selected course</string>
    <string name="registration">Registration</string>
    <string name="signin_success">Registration successfully completed</string>
    <string name="img_upload">Image uploaded</string>
    <string name="imgProfile_msg">Insert the new image in the Android folder to modify the profile image</string>
    <string name="esami_passati">Passed exams</string>
    <string name="esami_da_svolgere">Not passed exams</string>
    <string name="set_result">Rate this project</string>
    <string name="project_rate_title_dialog">Project rating</string>
    <string name="project_rate_message_dialog">Rate the project using value between 0 and 33.</string>
    <string name="error_insert_rate">Rate insert not valid</string>
    <string name="project_comment_message_dialog">Insert your personal comment</string>
    <string name="succesful_rate">Project successfully evaluated</string>
    <string name="exam_not_found">Exam not found</string>
    <string name="exam_firebase_error">Error getting exam</string>
    <string name="language">Select language</string>
    <string name="select">Select</string>
    <string name="share_file">Share file on whatsapp</string>
    <string name="file_upload_lab_btn">Upload</string>
    <string name="delete_bt_doc">Delete</string>
    <string name="delete_select">" Delete in progress"</string>
    <string name="delete_succ">File deleted successfully</string>
    <string name="delete_error">Delete failed</string>
    <string name="alert_home">Select the degree course to view the projects included in each exam. Login is required.</string>
    <string name="file_name">Enter file name!</string>
    <string name="file_select">Select file</string>
    <string name="create_project">Create new project</string>
    <string name="confirm">Confirm</string>
    <string name="error_get_doc">Error getting documents: </string>
    <string name="not_delete">File not deleted</string>
    <string name="dir_create">User directory successful created</string>
    <string name="name_file_label">Name</string>
    <string name="date_file_label">Date</string>
    <string name="size_file_label">Size</string>
    <string name="project_name_label">Project Name</string>
    <string name="project_exam_label">Project Exam</string>
    <string name="example_name_label" translatable="false">Mario</string>
    <string name="example_surname_label" translatable="false">Rossi</string>
    <string name="selected_file_example">Selected File</string>
    <string name="cds_with_student_error">This CDS have some student registered, it cannot be delete</string>
    <string name="label_cDs">Select CDS</string>
    <string name="label_teacher">Select Teachers</string>
    <string name="exam_description">Exam description</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="add_teacher">Add teacher</string>
    <string name="course_name">Course name</string>
    <string name="course_description">Course description</string>
    <string name="cds_dialog_title">Choose a course</string>
    <string name="teacher_dialog_title">Select the teachers</string>
    <string name="change_select_teachers">Change selected teachers</string>
    <string name="add">Add</string>
    <string name="exam_delete_error">Some student have to do this exam so it cannot be deleted</string>
    <string name="no_exam_linked_error">There is no student linked to this exam</string>
    <string name="no_project_linked_error">There is no exam linked to some project</string>
    <string name="err_delete_tea">Before deleting the teacher make sure that all related exams have at least one other teacher.</string>
    <string name="teach_miss">No teacher has been assigned</string>
    <string name="transition">transition</string>
    <string name="add_btn_description">Add button</string>
    <string name="delete">Delete</string>
    <string name="course_deleted">Course deleted</string>
    <string name="exam_deleted">Exam deleted</string>
    <string name="projects">Projects</string>
    <string name="documents">Documents</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="no_selection_file_del">No file selected! Please select one or more file to delete</string>
    <string name="whatsapp">Share on Whatsapp</string>
    <string name="permission_enable_msg">Thanks for enabling the permission</string>
    <string name="allow_perm_msg">Please allow the Permission to use this functionality</string>
    <string name="perm_need_title">Permission Needed</string>
    <string name="perm_need_storage_msg">Permission is needed to access files from your device</string>
    <string name="not_valid_chosen">File chosen not valid!</string>
    <string name="project">Project</string>
    <string name="upload_file_msg">Insert the new file in the Android folder to upload</string>
    <string name="no_inprogress_projects">There are no projects in progress</string>
    <string name="no_closed_projects">There are no closed projects</string>
    <string name="no_exams">There are no exams</string>
    <string name="no_files">There are no files</string>
    <string name="no_projects">There are no projects</string>
</resources>