<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/file_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignBaseline="@id/file_icon"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:focusable="false" />

    <ImageView
        android:id="@+id/file_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/file_cb"
        android:clickable="false"
        android:focusable="false"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/file_icon"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/name_file_label" />

    <TextView
        android:id="@+id/file_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/file_name"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/file_icon"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/date_file_label" />

    <TextView
        android:id="@+id/file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/file_date"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/file_icon"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/size_file_label" />

</RelativeLayout>