<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginBottom="60dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guest.LoginFragment">

    <ScrollView
        android:id="@+id/ScrollViewID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/presentation"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@color/blue_200"
                android:padding="20dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <ImageView
                    android:id="@+id/ic_action_name"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/profile_image"
                    android:src="@mipmap/ic_launcher_round" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/loginType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/radio_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/student"
                        android:buttonTint="@color/blue_700" />

                    <RadioButton
                        android:id="@+id/radio_teacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teacher"
                        android:buttonTint="@color/blue_700" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/email"
                    android:src="@drawable/ic_baseline_email_24" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/passwordIcon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/course"
                    android:src="@drawable/ic_baseline_vpn_key_24" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTxtIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,UseCompoundDrawables"
                tools:layout_editor_absoluteX="2dp">

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:background="@color/deep_orange_500" />

                <Button
                    android:id="@+id/reset_password_btn"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_password"
                    android:background="@color/deep_orange_500" />

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@null"
                    android:text="@string/btn_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_goto_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:text="@string/btn_goto_register"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:onClick="go_to_register"
                    tools:ignore="OnClick" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>