<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:id="@+id/sign_up">

    <ScrollView
        android:id="@+id/ScrollViewID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/presentation"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="?attr/actionBarSize"
                android:background="@color/turquoise_200"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <ImageView
                    android:id="@+id/ic_action_name"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/profile_image"
                    android:src="@drawable/ic_launcher_foreground" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_baseline_person_24"
                    android:contentDescription="@string/person_image" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:autofillHints="@string/name"
                    android:inputType="textPersonName" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="100dp"
                    android:autofillHints="@string/surname"
                    android:inputType="textPersonName" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="55dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,UseCompoundDrawables"
                tools:layout_editor_absoluteX="2dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/course"
                    android:src="@drawable/ic_baseline_book_24" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp"
                    android:autofillHints="@string/course"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="55dp"
                android:paddingEnd="55dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables"
                tools:layout_editor_absoluteX="0dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/email"
                    android:src="@drawable/ic_baseline_email_24" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"
                    android:autofillHints="@string/e_mail"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="55dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,UseCompoundDrawables"
                tools:layout_editor_absoluteX="2dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/course"
                    android:src="@drawable/ic_baseline_vpn_key_24" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp"
                    android:autofillHints="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,UseCompoundDrawables"
                tools:layout_editor_absoluteX="2dp">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:background="@color/sand_200"/>

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/btn_forgot_password"
                    android:textAllCaps="false"
                    android:background="@null"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_already_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@null"
                    android:text="@string/btn_already_reg"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>